--- a/net45/Properties/Resources.resx
+++ b/net45/Properties/Resources.resx
@@ -133,17 +133,11 @@
   <data name="flag_ua" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\flag_ua.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btnOk3a" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnOk3a.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="flag_ua_tr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\flag_ua_tr.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="flag_de_tr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\flag_de_tr.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="btnOk3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnOk3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="flag_ru" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\flag_ru.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -153,9 +147,6 @@
   </data>
   <data name="flag_ru_tr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\flag_ru_tr.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="btnOk1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnOk1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_bg_update" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\netcore\Resources\_bg_update.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -285,5 +276,8 @@
   </data>
   <data name="comp_waterfx" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\netcore\Resources\comp_waterfx.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnOk1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\netcore\Resources\btnOk1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
